--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -1,6 +1,24 @@
 .question {
-    background-color:  '#ffffff10';
+    background-color: '#ffffff10';
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
-    margin: 0px 30px
+    margin: 30px 0px;
+    border-radius: 5px;
+    padding: 15px;
+    -webkit-box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.44);
+    -moz-box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.44);
+    box-shadow: 1px 1px 20px 0px rgba(50, 50, 50, 0.44);
 }
+
+h1 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #FFF;
+    font-size: large;
+}
+
+span {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #FFF;
+    font-size: medium;
+}
+
