--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,11 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-image: url(assets/background.jpg);
-    background-size: 100% cover;
+    background-position: center center;
+    background-repeat:  no-repeat;
+    background-attachment: fixed;
+    background-size:  cover;
+    background-color: #999;
     overflow-x: hidden;
 }
 
