--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,19 @@ code {
 ::-webkit-resizer {
     background: rgb(255, 255, 255); 
 }
+
+h6 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #FFF;
+    font-size:medium;
+    width: 100%;
+    text-align: center;
+}
+
+a {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #FFF;
+    font-size:medium;
+    width: 100%;
+    text-align: center;
+}
